--- a/App.config
+++ b/App.config
@@ -5,5 +5,7 @@
     　　　対象チャンネルにBotを招待する必要がある-->
     <add key="TOKEN" value="" />
     <add key="CHANNEL" value="general" />
+    <!--<add key="PROXY" value="http://localhost:8080" />-->
+    <add key="PROXY" value="" />
   </appSettings>
 </configuration>
